exports[`Container > Organization Delete Analysis 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Commuter Group 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Organization 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-3",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Delete Site 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organization/organization-2",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organization Organization View loads 1`] = `
"<div class=\"container\">
  <div class=\"row\">
    <div class=\"col-xs-12\">
      <h2>
        <i class=\"fa fa-shield fa-fw \"></i>

        <!-- react-text: 6 -->Mock Organization<!-- /react-text -->
      </h2>
      <div class=\"btn-group\">
        <button to=\"/organization/organization-2/edit\" type=\"button\" class=\"btn btn-warning\">Edit</button>
        <button type=\"button\" class=\"btn btn-danger\">Delete</button>
      </div>
      <p>Below are this organization\'s sites, commuter groups and analyses.</p>
      <h3>

        <!-- react-text: 12 -->Sites<!-- /react-text -->
        <button to=\"/organization/organization-2/site/create\" type=\"button\" class=\"pull-right btn btn-default\"><span>Create a new site</span> 
          <i class=\"fa fa-building fa-fw \"></i>
        </button>
      </h3>
      <p>A site is a location of a building or new address that you want to use as the centerpoint of your commutes.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 26 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Address\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"address\">

                    <!-- react-text: 29 -->Address<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 32 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">site-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Acme Corp</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">123 ABC St</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div class=\"btn-group\">
                      <button to=\"/site/site-2/edit\" type=\"button\" class=\"btn btn-warning\">Edit</button>
                      <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <h3>

        <!-- react-text: 52 -->Commuter Groups<!-- /react-text -->
        <button to=\"/organization/organization-2/group/create\" type=\"button\" class=\"pull-right btn btn-default\"><span>Create a new group</span> 
          <i class=\"fa fa-users fa-fw \"></i>
        </button>
      </h3>
      <p>A commuter group is a list of commuters that can commute to a particular site.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 66 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Commuters\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"commuters\">

                    <!-- react-text: 69 -->Commuters<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 72 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">group-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Mock Group</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>1</div>
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <h3>

        <!-- react-text: 91 -->Analyses<!-- /react-text -->
        <button to=\"/organization/organization-2/analysis/create\" type=\"button\" class=\"pull-right btn btn-default\"><span>Create a new analysis</span> 
          <i class=\"fa fa-bar-chart fa-fw \"></i>
        </button>
      </h3>
      <p>An analysis calculates commuting statistics for a pairing of a commuter group and site.</p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <thead>
                <tr>
                  <th class=\"\" style=\"text-align: left; display: none; min-width: NaNpx;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Name\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 105 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" title=\"Tools\" style=\"text-align: left; min-width: NaNpx;\" data-field=\"undefined\">

                    <!-- react-text: 108 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">analysis-2</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>An Analysis</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
